// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseTab should render active tab component 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-labelledby": "tab-0",
      "id": "tabpanel-0",
      "role": "tabpanel",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "MuiBox-root MuiBox-root-2",
        },
        "children": Array [],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-labelledby": undefined,
      "id": undefined,
      "role": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-labelledby": undefined,
      "id": undefined,
      "role": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`BaseTab should render inactive tab component 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-labelledby": "tab-1",
      "hidden": "",
      "id": "tabpanel-1",
      "role": "tabpanel",
    },
    "children": Array [],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-labelledby": undefined,
      "hidden": undefined,
      "id": undefined,
      "role": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-labelledby": undefined,
      "hidden": undefined,
      "id": undefined,
      "role": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
